Improvement on overflow prevention

--- a/src/main/resources/toserve/css/eschool.css
+++ b/src/main/resources/toserve/css/eschool.css
@@ -90,8 +90,10 @@ img.logo{
 }
 
 #navTree{
-    width:150px;
-    padding:0;
+    width:146px;
     margin:0;
+    white-space:normal !important;
+    height: auto;
+    padding:1px 2px;
     overflow:auto;
 }
